<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textViewTimerLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/hh_mm_ss"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.25" />

    <EditText
        android:id="@+id/editTextHours"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="2"
        android:gravity="center"
        android:hint="@string/value_0"
        android:inputType="number"
        app:layout_constraintStart_toStartOf="@+id/textViewTimerLabel"
        app:layout_constraintTop_toBottomOf="@+id/textViewTimerLabel"
        android:autofillHints="" />

    <EditText
        android:id="@+id/editTextMinutes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="2"
        android:gravity="center"
        android:hint="@string/value_0"
        android:inputType="number"
        app:layout_constraintStart_toEndOf="@+id/editTextHours"
        app:layout_constraintTop_toBottomOf="@+id/textViewTimerLabel"
        android:autofillHints="" />

    <EditText
        android:id="@+id/editTextSeconds"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="2"
        android:gravity="center"
        android:hint="@string/value_0"
        android:inputType="number"
        app:layout_constraintEnd_toEndOf="@+id/textViewTimerLabel"
        app:layout_constraintStart_toEndOf="@+id/editTextMinutes"
        app:layout_constraintTop_toBottomOf="@+id/textViewTimerLabel"
        android:autofillHints="" />

    <Button
        android:id="@+id/buttonStart"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:onClick="onClickStart"
        android:text="@string/start"
        app:layout_constraintEnd_toEndOf="@+id/textViewTimerLabel"
        app:layout_constraintStart_toStartOf="@+id/textViewTimerLabel"
        app:layout_constraintTop_toBottomOf="@+id/editTextMinutes" />

    <Button
        android:id="@+id/buttonReset"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="OnClickButtonReset"
        android:text="@string/reset"
        app:layout_constraintEnd_toEndOf="@+id/textViewTimerLabel"
        app:layout_constraintStart_toStartOf="@+id/textViewTimerLabel"
        app:layout_constraintTop_toBottomOf="@+id/buttonStart" />

</androidx.constraintlayout.widget.ConstraintLayout>